--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "dayjs": "^1.10.6",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.4.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
