--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^10.0.0",
     "ethers": "^5.4.2",
     "next": "latest",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
