--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "latest",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
